--- a/src/Components/Explore menu/ExploreMenu.css
+++ b/src/Components/Explore menu/ExploreMenu.css
@@ -9,12 +9,12 @@
     font-weight: 500;
 }
 .explore-menu-text{
-    /* max-width: 60%; */
+    max-width: 60%;
     color: #262626;
 }
 .explore-menu-list{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap: 30px;
     text-align: center;
@@ -46,4 +46,11 @@
     border: 4px solid tomato;
     padding: 2px;
     overflow: hidden;
+}
+
+@media (max-width:1050px) {
+    .explore-menu-text{
+        max-width: 100%;
+        font-size: 14px;
+    }
 }
