--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -35,7 +35,9 @@
 }
 .footer-social-icons{
     width: 40px;
+    gap: 20px;
     margin-right: 15px;
+    cursor: pointer;
 }
 .footer hr{
     width: 100%;
@@ -43,4 +45,14 @@
     margin: 20px;
     background-color: grey;
     border: none;
+}
+@media (max-width:750px) {
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+    }
+    .footer-copyright{
+        text-align: center;
+    }
 }
