--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -11,28 +11,29 @@
     flex-direction: column;
     align-items: start;
     bottom: 10%;
-    left: 10%;
-    gap: 20px;
+    left: 6vw;
+    gap: 1.5vw;
     animation: fadeIn 3s;
+    max-width: 50%;
 }
 
 .header-contents h2{
 font-weight: 500;
 color: white;
-font-size: 50px;
-gap: 10px;
+font-size:max(4.5vw , 22px);
+
 }
 .header-contents p{
     color: white;
-    font-size: 20px;
+    font-size:max(1vw);
 }
 .header-contents button{
     border: none;
     color: #747474;
-    font-weight: 700;
-    padding:10px 15px ;
+    font-weight: 500;
+    padding:1vw 2.3vw;
     background-color: white;
-    font-size: 12px;
+    font-size: max(1vw,13px);
     border-radius: 50px;
 }
 @media (max-width:1050px) {
@@ -40,7 +41,7 @@ gap: 10px;
         height: 38vw;
     }
     .header-contents{
-        max-width: 55%;
+        max-width: 45%;
     }
 }
 @media (max-width:750px) {
@@ -52,6 +53,7 @@ gap: 10px;
         display: none;
     }
     .header-contents button{
-        padding: 2vw 4vw;
+        padding: 1vw 3vw;
+        margin-bottom: 10px;
     }
 }
