--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,16 @@
 *{
   padding: 0px;
   margin: 0px;
+  box-sizing: border-box;
+  font-family: "Outfit", sans-serif;
+  scroll-behavior: smooth;
 }
 body{
   min-height: 100vh;
 }
 a{
   text-decoration: none;
+  color: inherit;
 }
 .app{
   width: 80%;
