--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -17,6 +17,12 @@
     gap: 80px;
 
 }
+.footer-content img{
+    width: 130px;
+    border-radius: 50%;
+    cursor: pointer;
+    
+}
 .footer-content-left ,.footer-content-right,.footer-content-center{
     display: flex;
     flex-direction: column;
