--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -50,7 +50,7 @@
 }
 @media (max-width:1050px) {
     .navbar .logo{
-        width: 140px;
+        width: 120px;
     }
     .navbar-menu{
         gap: 20px;
@@ -69,7 +69,7 @@
 
 @media (max-width:900px) {
     .navbar .logo{
-        width: 120px;
+        width: 100px;
     }
     .navbar-menu{
         gap: 15px;
@@ -91,5 +91,7 @@
     .navbar-menu{
      display: none;
     }
-   
+    .navbar .logo{
+        width: 80px;
+    }
 }
