--- a/src/Components/Explore menu/ExploreMenu.css
+++ b/src/Components/Explore menu/ExploreMenu.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-
+    width: 80%;
+    margin: auto;
 }
 .explore-menu h1{
     color: #262626;
