--- a/src/Components/Fooditem/Fooditem.css
+++ b/src/Components/Fooditem/Fooditem.css
@@ -5,6 +5,8 @@
     box-shadow: 0px 0px 10px #00000015;
     transition: 0.3s;
     animation: fadeIn 1s;
+    width: 80%;
+    margin: auto;
 }
 .food-item-image{
     width: 100%;
