--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 20px  8vw;
+    padding: 20px  5vw;
     padding-top: 80px;
     margin-top: 100px;
 }
@@ -22,6 +22,24 @@
     border-radius: 50%;
     cursor: pointer;
     
+}
+@media (max-width:1050px) {
+   
+    .footer-content img{
+        width: 120px;
+    }
+}
+@media (max-width:900px) {
+   
+    .footer-content img{
+        width: 100px;
+    }
+}
+@media (max-width:750px) {
+   
+    .footer-content img{
+        width: 80px;
+    }
 }
 .footer-content-left ,.footer-content-right,.footer-content-center{
     display: flex;
